// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`visual snapshot — Combobox primitive (T-UI-414) > renders Combobox with three options counts > empty 1`] = `
<div
  class="flex flex-col gap-ui-space-2"
>
  <input
    aria-autocomplete="list"
    aria-controls=":r0:"
    aria-label="Empty combobox"
    class="block w-full rounded-ui-md border border-ui-border bg-ui-bg px-ui-space-3 py-ui-space-2 text-ui-text-base text-ui-fg placeholder:text-ui-fg-muted focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ui-accent focus-visible:ring-offset-2 disabled:opacity-50"
    id="snap-combobox-empty"
    placeholder="Search…"
    role="searchbox"
    type="search"
    value=""
  />
  <select
    aria-label="Empty combobox"
    class="block w-full rounded-ui-md border border-ui-border bg-ui-bg text-ui-text-base text-ui-fg focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ui-accent focus-visible:ring-offset-2 disabled:opacity-50"
    id="snap-combobox-empty-select"
  >
    <option
      disabled=""
      value=""
    >
      No matches
    </option>
  </select>
</div>
`;

exports[`visual snapshot — Combobox primitive (T-UI-414) > renders Combobox with three options counts > many 1`] = `
<div
  class="flex flex-col gap-ui-space-2"
>
  <input
    aria-autocomplete="list"
    aria-controls=":r2:"
    aria-label="Many combobox"
    class="block w-full rounded-ui-md border border-ui-border bg-ui-bg px-ui-space-3 py-ui-space-2 text-ui-text-base text-ui-fg placeholder:text-ui-fg-muted focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ui-accent focus-visible:ring-offset-2 disabled:opacity-50"
    id="snap-combobox-many"
    placeholder="Search…"
    role="searchbox"
    type="search"
    value=""
  />
  <select
    aria-label="Many combobox"
    class="block w-full rounded-ui-md border border-ui-border bg-ui-bg text-ui-text-base text-ui-fg focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ui-accent focus-visible:ring-offset-2 disabled:opacity-50"
    id="snap-combobox-many-select"
    size="3"
  >
    <option
      value="a"
    >
      Alpha
    </option>
    <option
      value="b"
    >
      Bravo
    </option>
    <option
      value="c"
    >
      Charlie
    </option>
  </select>
</div>
`;

exports[`visual snapshot — Combobox primitive (T-UI-414) > renders Combobox with three options counts > single 1`] = `
<div
  class="flex flex-col gap-ui-space-2"
>
  <input
    aria-autocomplete="list"
    aria-controls=":r1:"
    aria-label="Single combobox"
    class="block w-full rounded-ui-md border border-ui-border bg-ui-bg px-ui-space-3 py-ui-space-2 text-ui-text-base text-ui-fg placeholder:text-ui-fg-muted focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ui-accent focus-visible:ring-offset-2 disabled:opacity-50"
    id="snap-combobox-single"
    placeholder="Search…"
    role="searchbox"
    type="search"
    value=""
  />
  <select
    aria-label="Single combobox"
    class="block w-full rounded-ui-md border border-ui-border bg-ui-bg text-ui-text-base text-ui-fg focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ui-accent focus-visible:ring-offset-2 disabled:opacity-50"
    id="snap-combobox-single-select"
    size="1"
  >
    <option
      value="a"
    >
      Alpha
    </option>
  </select>
</div>
`;
